[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pushshift-python"
version = "0.1.0"
description = "Python wrapper for Reddit community analytics via the Pushshift API."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Cason Konzer" }]
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = [
    "pushshift_python",
    "_pushshift_api",
    "_pushshift_community",
    "_pushshift_file_handler",
    "_pushshift_modeling",
    "_pushshift_queries",
    "_pushshift_scalers",
    "_pushshift_subreddits",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


[project.optional-dependencies]
dev = [
    "pytest>=8",
    "dyno_lab @ git+https://github.com/casonk/dyno-lab.git",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
